--- a/assets/style/rp.css
+++ b/assets/style/rp.css
@@ -23,9 +23,9 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 530px;
-        padding: 0 20px;
-        margin-top: 80px;
+        height: max-content;
+        padding: 0 10px;
+        margin-top: 160px;
     }
     .get__started-left {
         margin-top: 20px;
@@ -42,8 +42,7 @@
         text-align: center;
     }
     .get-st-box {
-        margin-left: 100px;
-        margin-right: 100px;
+        margin: 20px 90px 80px;
     }
     .about-video {
         padding-top: 60px;
@@ -98,8 +97,7 @@
         flex-direction: column;
     }
     .achieved__top {
-        margin-bottom: 60px;
-        padding: 80px 0;
+        padding: 80px 10px;
     }
     .achieved__bottom {
         width: 100%;
@@ -170,7 +168,7 @@
         width: 100%;
         margin: 20px 0;
         display: grid;
-        grid-template-columns: 50px auto;
+        grid-template-columns: 60px auto;
     }
     .title-desc {
         margin-left: 10px;
